--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -33,12 +33,14 @@
 
 .img {
     max-width: 100%;
-    height: auto;
-    max-height: calc(100vh - 250px);
+    height: 90%;
     padding: 0.25rem;
-    // background-color: rgba(73, 183, 211, 0.5);
-    // border: 1px solid var(--white-color);
+    background-color: rgba(73, 183, 211, 0.5);;
+    border: 1px solid var(--white-color);
     border-radius: 35%;
+    box-shadow:
+    -50px -50px 0px -40px var(--orange-color),
+    50px 50px 0 -40px var(--orange-color);
 }
 
 
