--- a/src/pages/Contact/Form/Form.scss
+++ b/src/pages/Contact/Form/Form.scss
@@ -258,3 +258,10 @@ input {
         margin-top: 0px;
     }
 }
+
+.captcha-container {
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+    width: 100%;
+}
